--- a/home.html
+++ b/home.html
@@ -1,119 +1,192 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <header>
-        <div class="logo">
-            <img src="eco-5465432_640.png">
-            <span>Mauvaise</span></div>
-            <div class="content">
-            <!--<img src="icons8-search-50.png">-->
+      <div class="logo">
+        <img src="img/eco-5465432_640.png" />
+        <span>Mauvaise</span>
+      </div>
+      <div class="content">
+        <!--<img src="icons8-search-50.png">-->
         <button class="call-button">
-            <img src="phone.png">
-            <pre>Appelle Moi
-0645014469</pre>
+          <img src="img/phone.png" />
+          <pre>
+Appelle Moi
+0645014469</pre
+          >
         </button>
-    </div>
+      </div>
     </header>
     <div class="slider">
-        <div class="slide current">
-            <img src="star-removebg-preview.png">
-            <pre> Bienvenue Sur Notre Site
-            Vivez Une Belle Expérience</pre>
-        </div>
+      <div class="slide current">
+        <img src="img/star-removebg-preview.png" />
+        <pre>
+ Bienvenue Sur Notre Site
+            Vivez Une Belle Expérience</pre
+        >
+      </div>
     </div>
-    <div class="btn">
-        <div class="carre"></div>
-        <div class="carre-or"></div>
-        <img src="ferns-6530057_640.jpg" class="fern">
-       <pre><h1>Definition Des Plantes Nuisibles :</h1>
+    <div id="btn">
+      <div class="carre"></div>
+      <div class="carre-or"></div>
+      <img src="img/ferns-6530057_640.jpg" class="fern" />
+      <pre><h1>Definition Des Plantes Nuisibles :</h1>
         Les plantes nuisibles, qu'elles soient qualifiées de "mauvaises herbes" ou d'"adventices",
         croissent indésirables au sein des cultures, engendrant divers problèmes tels que la 
         compétition avec les cultures pour les ressources, une propagation rapide, et parfois
         l'émission de toxines ou d'allergènes. Leur contrôle demande un investissement significatif
         en termes d'efforts.</pre>
-        <div><img src="nature-2983254_1280.jpg" class="nature-img"></div>
+      <div><img src="img/nature-2983254_1280.jpg" class="nature-img" /></div>
     </div>
-    <div class="cont">
-        <div class="p1">
-            <p>ADVENTICES VS  MAUVAISES HERBES</p>
-            <div class="line"></div>
+    <div id="diff">
+      <div class="p1">
+        <p>ADVENTICES VS MAUVAISES HERBES</p>
+        <div class="line"></div>
+      </div>
+      <div class="p2">
+        <img src="img/nettle-2564588_1280.jpg" class="img2" />
+        <div class="btn-group">
+          <button class="button1">Mauvaise</button>
         </div>
-        <div class="p2">
-            <img src="nettle-2564588_1280.jpg" class="img2">
-              <div class="btn-group">
-                <button class="button1">Mauvaise</button>
-              </div>
-            <p>Plantes Non Désirées<br>
-                Dans Les Zones Cultivées</p>
+        <p>
+          Plantes Non Désirées<br />
+          Dans Les Zones Cultivées
+        </p>
+      </div>
+      <div class="p3">
+        <img src="img/img_000270591CRS.jpg" class="img3" />
+        <div class="btn-group">
+          <button class="button2">Adventice</button>
         </div>
-        <div class="p3">
-            <img src="img_000270591CRS.jpg" class="img3">
-              <div class="btn-group">
-                <button class="button2">Adventice</button>
-              </div>
-            <p>Plantes Poussant Dans<br>Des Endroits Inhabituels</p>
-        </div>
+        <p>Plantes Poussant Dans<br />Des Endroits Inhabituels</p>
+      </div>
     </div>
-    <div class="mono">
-        <div class="mo">
-            <p>Plante Nuisible Monocotylédone</p>
+    <div id="mono">
+      <div class="mo">
+        <p>Plante Nuisible Monocotylédone</p>
 
-            <div class="line1"></div>
+        <div class="line1"></div>
 
-            <img src="flower-634570_1280.jpg" class="im">
+        <img src="img/flower-634570_1280.jpg" class="im" />
 
-            <div class="carre-or1"></div>
+        <div class="carre-or1"></div>
 
-            <input type="image" id="cercle1" src="seed-8265880_640.jpg" />
+        <input type="image" id="cercle1" src="img/seed-8265880_640.jpg" />
 
-            <p class="p4"><span>GRAINES:</span>UNE SEULE FEUILLE COTYLÉDONE DANS LA GRAINE.</p>
+        <p class="p4">
+          <span>GRAINES:</span>UNE SEULE FEUILLE COTYLÉDONE DANS LA GRAINE.
+        </p>
 
-            <input type="image" id="cercle2" src="corn-leaf-592581_640.jpg" />
+        <input type="image" id="cercle2" src="img/corn-leaf-592581_640.jpg" />
 
-            <p class="p5"><span>FEUILLES:</span>NERVATION PARALLÈLE, DES NERVURES LONGITUDINALES<br>
-                QUI  COURENT PARALLÈLEMENT LES UNES AUX AUTRES.</p>
+        <p class="p5">
+          <span>FEUILLES:</span>NERVATION PARALLÈLE, DES NERVURES
+          LONGITUDINALES<br />
+          QUI COURENT PARALLÈLEMENT LES UNES AUX AUTRES.
+        </p>
 
-            <img src="squirrel-tailed-grass-2532519_640.jpg" class="im1">
+        <img src="img/squirrel-tailed-grass-2532519_640.jpg" class="im1" />
 
-            <div class="carre-or2"></div>
+        <div class="carre-or2"></div>
 
-            <input type="image" id="cercle3" src="seed-8265880_640.jpg" />
+        <input
+          type="image"
+          id="cercle3"
+          src="img/jpg_tige_monocots_french.jpg"
+        />
 
-            <p class="p6"><span>TIGES:</span>TIGES GÉNÉRALEMENT RONDES ET CREUSES, AVEC DES NŒUDS<br>
-                (RENFLEMENTS) OÙ LES FEUILLES S'ATTACHENT.</p>
+        <p class="p6">
+          <span>TIGES:</span>TIGES GÉNÉRALEMENT RONDES ET CREUSES, AVEC DES
+          NŒUDS<br />
+          (RENFLEMENTS) OÙ LES FEUILLES S'ATTACHENT.
+        </p>
 
-            <!--<input type="image" id="cercle4" src="seed-8265880_640.jpg" />
-            <p><span>RACINES:</span>RACINE FIBREUSE, UN RÉSEAU DE RACINES FINES ET RAMIFIÉES.</p>-->
-        </div>
+        <input type="image" id="cercle4" src="img/image_4.jpeg" />
+        <p class="p7">
+          <span>RACINES:</span>RACINE FIBREUSE, UN RÉSEAU DE RACINES FINES ET
+          RAMIFIÉES.
+        </p>
+      </div>
     </div>
-    <div class="deco">
-        <div class="de">
-            <p>Plantes Nuisible Dicotylédone</p>
-            <div class="line2"></div>
-           <!-- <img src="let-honiara-6212714_640.jpg" class="im2">
-            <div class="carre-or3"></div>
-            <input type="image" id="cercle5" src="seed-8265880_640.jpg" />
-            <input type="image" id="cercle6" src="seed-8265880_640.jpg" />
-            <p><span>GRAINES:</span>DEUX FEUILLES COTYLÉDONES DANS LA GRAINE.</p>
-            <p><span>FEUILLES:</span>NERVATION RAMIFIÉE, DES NERVURES QUI SE RAMIFIENT<br>
-                À PARTIR  D'UNE NERVURE CENTRALE.</p>
+    <div id="dico">
+      <div class="di">
+        <p>Plantes Nuisible Dicotylédone</p>
+        <div class="line2"></div>
+        <img src="img/let-honiara-6212714_640.jpg" class="im" />
+        <div class="carre-or3"></div>
+        <input type="image" id="cercle1" src="img/plant-259806_640.jpg" />
+        <p class="p4">
+          <span>GRAINES:</span>DEUX FEUILLES COTYLÉDONES DANS LA GRAINE.
+        </p>
+        <input type="image" id="cercle2" src="img/leaves-299931_640.jpg" />
+        <p class="p5">
+          <span>FEUILLES:</span>NERVATION RAMIFIÉE, DES NERVURES QUI SE
+          RAMIFIENT<br />
+          À PARTIR D'UNE NERVURE CENTRALE.
+        </p>
 
-            <img src="yellow-foxglove-177300_1280.jpg" class="im3">
-            <div class="carre-or4"></div>
-            <input type="image" id="cercle7" src="seed-8265880_640.jpg" />
-            <input type="image" id="cercle8" src="seed-8265880_640.jpg" />
-            <p><span>TIGES:</span>TIGES GÉNÉRALEMENT SOLIDES, AVEC DES NŒUDS OÙ LES <br>
-                FEUILLES  ET LES BRANCHES S'ATTACHENT.</p>
-            <p><span>RACINES:</span>RACINE PIVOTANTE, UNE RACINE PRINCIPALE ÉPAISSE<br>
-                AVEC DES  RACINES SECONDAIRES PLUS PETITES QUI S'EN DÉTACHENT.</p>-->
-        </div>
+        <img src="img/yellow-foxglove-177300_1280.jpg" class="im1" />
+        <div class="carre-or4"></div>
+        <input type="image" id="cercle3" src="img/R.jpg" />
+        <p class="p6">
+          <span>TIGES:</span>TIGES GÉNÉRALEMENT SOLIDES, AVEC DES NŒUDS OÙ LES
+          <br />
+          FEUILLES ET LES BRANCHES S'ATTACHENT.
+        </p>
+
+        <input type="image" id="cercle4" src="img/IMG_20240705_085656.jpg" />
+        <p class="pa4">
+          <span>RACINES:</span>RACINE PIVOTANTE, UNE RACINE PRINCIPALE
+          ÉPAISSE<br />
+          AVEC DES RACINES SECONDAIRES PLUS PETITES QUI S'EN DÉTACHENT.
+        </p>
+      </div>
     </div>
-</body>
+    <div class="leader-pn">
+      <div class="leader">
+        <img src="img/autumn-1008520_640.webp" />
+        <p class="pn">Nous Sommes Leader Sur Le Plante Nuisible</p>
+      </div>
+    </div>
+    <div class="footer">
+      <div class="d1">
+        <p class="cont">Contactez-nous:</p>
+        <p class="eml">Email:</p>
+        <p class="hn">hanan2122hanan@gmail.com</p>
+        <p class="tl">télé:</p>
+        <p class="tle">0607985473</p>
+        <p class="adr">Adresse:</p>
+        <p class="rue">12 Rue Ibn Tachfine, Hay Riad, Rabat 10000, Maroc.</p>
+      </div>
+
+      <div class="d2">
+        <p class="lien">Liens utiles:</p>
+        <ul class="footer-lien">
+          <li><a href="#btn">Accueil</a></li>
+          <li><a href="#diff">Diff</a></li>
+          <li><a href="#mono">Mono</a></li>
+          <li><a href="#dico">Dico</a></li>
+        </ul>
+        <div class="line-ln">
+            <div class="line3"></div>
+            <ul class="footer-lien2">
+                <li><a href="facebook"><img src="img/733547.png" ></a></li>
+                <li><a href="insta"><img src="img/2111463.png" ></a></li>
+                <li><a href="twitter"><img src="img/3256013.png" ></a></li>
+                <li><a href="youtube"><img src="img/3955019.png" ></a></li>
+                <li><a href="linkdin"><img src="img/3536505.png" ></a></li>
+              </ul>
+          </div>
+      </div>
+      <div class="coperate">
+        <pre>©️2024-2026 Mauvaise -Tous Droits Réservés.</pre>
+      </div>
+    </div>
+  </body>
 </html>
-
