--- a/home.html
+++ b/home.html
@@ -3,45 +3,63 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Mauvaise</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
+    <!--<header>
       <div class="logo">
         <img src="img/eco-5465432_640.png" />
         <span>Mauvaise</span>
       </div>
       <div class="content">
-        <!--<img src="icons8-search-50.png">-->
         <button class="call-button">
           <img src="img/phone.png" />
-          <pre>
-Appelle Moi
-0645014469</pre
-          >
+          <p>Appelle Moi<br>
+            0645014469</p>
         </button>
       </div>
-    </header>
+    </header>-->
+
+      <nav class="navbar">
+        <ul class="navbar-menu">
+            <li><img src="img/logo-removebg-preview.png" id="logo"></li>
+            
+            <li><a href="#cnFter">Services</a></li>
+            <li><a href="#contact">Contact</a></li>  
+        </ul>
+    </nav>
+    
     <div class="slider">
       <div class="slide current">
-        <img src="img/star-removebg-preview.png" />
+        <div class="img-container">
+          <img src="img/pexels-eren-arici-718198662-22626247.jpg" >
+          </div>
+          <div class="img-container">
+          <img src="img/anemone-4870275_640.jpg" >
+          </div>
+          <div class="img-container">
+          <img src="img/corn-4439851_640.jpg" >
+          </div>
+          <div class="img-container">
+          <img src="img/fronds-1869757_640.jpg" >
+        </div>
+        <!--<img src="img/star-removebg-preview.png" />
         <pre>
  Bienvenue Sur Notre Site
-            Vivez Une Belle Expérience</pre
-        >
+            Vivez Une Belle Expérience</pre>-->
       </div>
     </div>
     <div id="btn">
       <div class="carre"></div>
       <div class="carre-or"></div>
       <img src="img/ferns-6530057_640.jpg" class="fern" />
-      <pre><h1>Definition Des Plantes Nuisibles :</h1>
-        Les plantes nuisibles, qu'elles soient qualifiées de "mauvaises herbes" ou d'"adventices",
-        croissent indésirables au sein des cultures, engendrant divers problèmes tels que la 
-        compétition avec les cultures pour les ressources, une propagation rapide, et parfois
-        l'émission de toxines ou d'allergènes. Leur contrôle demande un investissement significatif
-        en termes d'efforts.</pre>
+      <h1>Definition Des Plantes Nuisibles :</h1>
+       <p> Les plantes nuisibles, qu'elles soient qualifiées de "mauvaises herbes" ou d'"adventices",<br>
+        croissent indésirables au sein des cultures, engendrant divers problèmes tels que la <br>
+        compétition avec les cultures pour les ressources, une propagation rapide, et parfois<br>
+        l'émission de toxines ou d'allergènes. Leur contrôle demande un investissement significatif<br>
+        en termes d'efforts.</p>
       <div><img src="img/nature-2983254_1280.jpg" class="nature-img" /></div>
     </div>
     <div id="diff">
@@ -154,39 +172,39 @@ Appelle Moi
         <p class="pn">Nous Sommes Leader Sur Le Plante Nuisible</p>
       </div>
     </div>
-    <div class="footer">
-      <div class="d1">
-        <p class="cont">Contactez-nous:</p>
-        <p class="eml">Email:</p>
-        <p class="hn">hanan2122hanan@gmail.com</p>
-        <p class="tl">télé:</p>
-        <p class="tle">0607985473</p>
-        <p class="adr">Adresse:</p>
-        <p class="rue">12 Rue Ibn Tachfine, Hay Riad, Rabat 10000, Maroc.</p>
-      </div>
 
-      <div class="d2">
-        <p class="lien">Liens utiles:</p>
-        <ul class="footer-lien">
-          <li><a href="#btn">Accueil</a></li>
-          <li><a href="#diff">Diff</a></li>
-          <li><a href="#mono">Mono</a></li>
-          <li><a href="#dico">Dico</a></li>
-        </ul>
-        <div class="line-ln">
-            <div class="line3"></div>
-            <ul class="footer-lien2">
-                <li><a href="facebook"><img src="img/733547.png" ></a></li>
-                <li><a href="insta"><img src="img/2111463.png" ></a></li>
-                <li><a href="twitter"><img src="img/3256013.png" ></a></li>
-                <li><a href="youtube"><img src="img/3955019.png" ></a></li>
-                <li><a href="linkdin"><img src="img/3536505.png" ></a></li>
+    <footer>
+      <div id="contact">
+          <div class="foter">
+              <h3>Contactez-nous:</h3>
+              <p><span>Email:</span>hanan2122hanan@gmail.com</p>
+              <p><span>Phone:</span>+212 607985473</p>
+              <p><span>Adress:</span>12 Rue Ibn Tachfine Rabat 10000 Maroc.</p>
+          </div>
+
+          <div id="cnFter">
+              <h3>cliquer sur les liens</h3>
+                  <ul >
+                    <li><a href="#btn">Accueil</a></li>
+                    <li><a href="#diff">Diff</a></li>
+                    <li><a href="#mono">Mono</a></li>
+                    <li><a href="#dico">Dico</a></li>
+              </ul>
+          </div>
+          <div class="fn">
+              <h3>Suivez-nous</h3>
+              <ul>
+              <li><a href="#"><img src="img/733547.png"></a></li>
+              <li><a href="#"><img src="img/3256013.png"></a></li>
+              <li><a href="#"></i><img src="img/2111463.png"></a></li>
+              <li><a href="#"><img src="img/3536505.png"></a></li>
               </ul>
           </div>
       </div>
-      <div class="coperate">
-        <pre>©️2024-2026 Mauvaise -Tous Droits Réservés.</pre>
-      </div>
+      <div class="ab">
+        <p>&copy; 2024-2026 Mauvaise -Tous Droits Réservés.</p>
     </div>
+  </footer>
+
   </body>
 </html>
